# minepkg

./: .editorconfig  .gitignore  .gitlab-ci.yml  .goreleaser.yml  Cargo.toml  Dockerfile  LICENCE  Makefile  README.md  go.mod  go.sum  main.go  wails.json
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md
.github/workflows/: branch-builds.yml  dev-builds.yml  main-builds.yml  tag.yml
assets/: installer.sh  linux-installer.sh  windows-installer.ps1
cmd/: autocomplete.go  browse.go  build.go  bump.go  gui.go  info.go  init.go  install-curse.go  install-from-source.go  install-manifest.go  install-minepkg.go  install-source.go  install.go  join.go  launch.go  localdb.go  login.go  minepkg-login.go  outdated-tui.go  outdated.go  proto-handler.go  publish.go  remove.go  root.go  selfupdate.go  tidy.go  try.go  unpublish.go  update.go  upgrade-binary.go  utils.go
cmd/bump/: actions.go  bump.go  checks.go
cmd/config/: config.go  get.go  set.go
cmd/dev/: build.go  clearCache.go  dev.go  info.go
cmd/initCmd/: defaultManifest.go  emptyDirFinalization.go  initCmd.go  promptHelpers.go
cmd/launch/: cli-flags.go  fancy-prepare.go  handle-crash.go  launch.go  maybe-spinner.go  prepare.go  terminal-components.go
docs/: example1.minepkg.toml
gui/: app.go  start.go
gui/frontend/: .editorconfig  index.html  package-lock.json  package.json  package.json.md5  tailwind.config.js
internals/api/: api.go  (+7 more)
minepkg-wails/: app.go  go.mod  main.go  wails.json
src/: cli_config.rs  curse.rs  curse_meta_api.rs  dep_resolver.rs  lib.rs  local_db.rs  main.rs  manifest.rs  mc_instance.rs  minepkg-template.toml  utils.rs
testdata/: croptopia-lockfile.toml  croptopia-manifest-modified.toml  croptopia-manifest.toml  lgwl-for-arm64.patch.json  quilt.patch.yaml
(+174 files in other folders)
