[package]
name = "mmm"
version = "0.1.0"
authors = ["Filip Weiss <me@fiws.net>"]

[dependencies]
clap = "2.30.0"
futures = "0.1.18"
tokio-core = "0.1.12"
hyper = "0.11.25"
hyper-tls = "0.1.2"
bzip2 = "0.3.2"
snap = "0.2"
serde = "1.0.27"
serde_json = "1.0.14"
serde_derive = "1.0.27"
prettytable-rs = "0.6.7"
rayon = "1.0.0"
indicatif = "0.9.0"
console = "0.6.1"
version-compare = "0.0.6"
app_dirs2 = "2.0.3"

[dependencies.reqwest]
version = "0.8.5"
features = ["unstable"]
