[package]
name = "minepkg"
version = "0.1.0"
authors = ["Filip Weiss <me@fiws.net>"]

[dependencies]
clap = "2.32.0"
futures = "0.1.18"
tokio-core = "0.1.12"
hyper = "0.11.25"
hyper-tls = "0.1.2"
bzip2 = "0.3.3"
snap = "0.2"
serde = "1.0.70"
serde_json = "1.0.26"
serde_derive = "1.0.70"
prettytable-rs = "0.7.0"
rayon = "1.0.2"
indicatif = "0.9.0"
console = "0.6.1"
version-compare = "0.0.6"
app_dirs2 = "2.0.3"
petgraph = "0.4.2"
toml_edit = "0.1.3"
semver = "0.9.0"
failure = "0.1.1"
lazy_static = "1.0.2"

[dependencies.reqwest]
version = "0.8.6"
features = ["unstable"]
